Fix white space

--- a/src/App.css
+++ b/src/App.css
@@ -366,6 +366,13 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 
 @media only screen and (max-width: 768px) {
 
+  html,body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden !important;
+  }
+
   #card-img-1 {
     height: 290px;
     object-fit: contain;
